Fix: Add lighter red color for WCAG contrast issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@
   /* ================= SECONDARY (RED / ACTION) ================= */
   --color-secondary-100: #ffe3e3;
   --color-secondary-200: #ffc9c9;
+  --color-secondary-450: #e54848; /* Needed for WCAG contrast */
   --color-secondary-500: #dc2626; /* strong red, maybe change to this #e62e2e */
   --color-secondary-600: #b91c1c;
 
@@ -154,7 +155,8 @@ button {
 }
 
 @utility policy {
-  background-color: var(--color-effect-gray);
+  background-color: var(--color-overlay-gray-soft);
+  border: 1px solid var(--color-basic-400);
   border-radius: 4px;
   padding: 8px;
   gap: 8px;
